--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,25 @@ body{
 .DINcondensed { /*DIN-condensed font */ }
 
 .frame{
-	position: absolute;
-	left: 50%;
-	margin: 0 0 0 -482px;
+	max-width: 640px;
+	margin: 0 auto;
+}
+
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+	z-index: 10;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
 }
 
 #frameTwo{ top: 421px; }
@@ -157,9 +173,8 @@ section.Digitaal-magazine-MKBGW-03 {
 section.Digitaal-magazine-MKBGW-04 {
 	position:relative;
 	background: url("../images/Digitaal-magazine-MKBGW_04.jpg") top center no-repeat;
-	background-size: 2560px;
-	width:100%;
-	height:1376px;
+	background-size: contain;
+	height: 1376px;
 }
 
 section.Digitaal-magazine-MKBGW-05 {
@@ -191,8 +206,7 @@ section.Digitaal-magazine-MKBGW-06 {
 section.Digitaal-magazine-MKBGW-07 {
 	position:relative;
 	background: url("../images/Digitaal-magazine-MKBGW_07.jpg") top center no-repeat;
-	background-size: 2560px;
-	width:100%;
+	background-size: contain;
 	height:1186px;
 }
 
@@ -223,8 +237,7 @@ section.Digitaal-magazine-MKBGW-09 {
 section.Digitaal-magazine-MKBGW-10 {
 	position:relative;
 	background: url("../images/Digitaal-magazine-MKBGW_10.jpg") top center no-repeat;
-	background-size: 2560px;
-	width:100%;
+	background-size: contain;
 	height:1078px;
 }
 
