--- a/css/main.css
+++ b/css/main.css
@@ -11,15 +11,19 @@ p{
 }
 
 .frame{
-	max-width: 964px;
+	width: 80%;
+	max-width: 1200px;
 	margin: 0 auto;
 }
 
 .video-container {
+	width: 70%;
+	max-width: 964px;
 	position:relative;
-	padding-bottom:56.25%;
+	padding-bottom:37%;
 	padding-top:30px;
 	height:0;
+	margin: 0 auto;
 	overflow:hidden;
 	z-index: 10;
 }
@@ -89,9 +93,16 @@ section.Digitaal-magazine-MKBGW-02 {
 
 #studentVidOne{
 	color: white;
-	top: 7.8%;
+	top: 12.8%;
 	position: absolute;
-	left: 21%;
+	left: 25%;
+}
+
+#textTwo{
+	position: relative;
+	color: white;
+	top: 25%;
+	left: 18.2%;
 }
 
 #hex1{
@@ -99,7 +110,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	height: auto;
 	width: 26%;
 	margin-left: -6.4%;
-	margin-top: 50%;
+	margin-top: 60%;
 }
 
 #hex2{
@@ -112,13 +123,13 @@ section.Digitaal-magazine-MKBGW-02 {
 
 #stripe1 {
 	position: absolute;
-	top: 10%;
-	left: 18%;
+	top: 15%;
+	left: 22.4%;
 }
 
 #stripe2 {
 	position: absolute;
-	margin-top: 61.1%;
+	margin-top: 71.1%;
 	margin-left: 0%;
 	width: 68.8%;
 }
