--- a/css/main.css
+++ b/css/main.css
@@ -98,11 +98,15 @@ section.Digitaal-magazine-MKBGW-02 {
 	left: 25%;
 }
 
+.vidInfo{
+	font-size: 26px;
+}
+
 #textTwo{
 	position: relative;
 	color: white;
 	top: 25%;
-	left: 18.2%;
+	left: 22.4%;
 }
 
 #hex1{
