--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body{
+	text-shadow: 0.5px 0.5px black;
 	margin: 0px;
 	background-color: #FFFFFF;
 	overflow-x: hidden;
@@ -11,16 +12,16 @@ p{
 }
 
 .frame{
-	width: 80%;
+	width: 63%;
 	max-width: 1280px;
 	margin: 0 auto;
 }
 
 .video-container {
-	width: 70%;
+	width: 87.5%;
 	max-width: 1280px;
 	position:relative;
-	padding-bottom:37%;
+	padding-bottom:47%; /* 16:9 ratio */
 	padding-top:30px;
 	height:0;
 	margin: 0 auto;
