--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body{
 	margin: 0px;
 	background-color: #FFFFFF;
 	overflow-x: hidden;
+	max-zoom: 120%;
 }
 
 .DINcondensed { /*DIN-condensed font */ }
@@ -86,7 +87,7 @@ section.Digitaal-magazine-MKBGW-02 {
 }
 
 .vidText{
-	left: 800px;
+	left:30%;
 	letter-spacing: 5px;
 	font-size: 40px;
 }
@@ -95,11 +96,11 @@ section.Digitaal-magazine-MKBGW-02 {
 	color: white;
 	top: 12.8%;
 	position: absolute;
-	left: 25%;
+
 }
 
 .vidInfo{
-	font-size: 26px; 
+	font-size: 26px;
 	font-size: 1.7vw;
 }
 
@@ -107,13 +108,14 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: relative;
 	color: white;
 	top: 21%;
-	left: 22.4%;
+	left: 30%;
+	font-size: 24pt;
 }
 
 #hex1{
 	position: absolute;
 	height: auto;
-	width: 55%;
+	width: 35%;
 	margin-left: 79%;
 	margin-top: -25%;
 }
@@ -121,20 +123,20 @@ section.Digitaal-magazine-MKBGW-02 {
 #hex2{
 	position: absolute;
 	height: auto;
-	width: 26%;
+	width: 19%;
 	margin-left: -6.4%;
-	margin-top: 22%;
+	margin-top: 24%;
 }
 
 #stripe1 {
 	position: absolute;
 	top: 15%;
-	left: 22.4%;
+	left: 28.1%;
 }
 
 #stripe2 {
 	position: absolute;
-	margin-top: 33.1%;
+	margin-top: 32.1%;
 	margin-left: 0%;
 	width: 68.8%;
 	z-index: 2;
@@ -144,7 +146,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: absolute;
 	width: 8%;
 	font-size: 40px;
-	top: 75%;
+	top: 74%;
 	color: white;
 	left: 33%;
 }
@@ -157,7 +159,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: absolute;
 	width: 8%;
 	font-size: 40px;
-	top: 75%;
+	top: 74%;
 	color: white;
 	left: 42%;
 }
@@ -170,7 +172,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: absolute;
 	width: 8%;
 	font-size: 40px;
-	top: 75%;
+	top: 74%;
 	color: white;
 	left: 51%;
 }
@@ -183,7 +185,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: absolute;
 	width: 8%;
 	font-size: 40px;
-	top: 75%;
+	top: 74%;
 	color: white;
 	left: 60%;
 }
