--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ p{
 }
 
 .frame{
-	width: 63%;
+	width: 50%;
 	max-width: 1280px;
 	margin: 0 auto;
 }
@@ -21,7 +21,7 @@ p{
 	width: 87.5%;
 	max-width: 1280px;
 	position:relative;
-	padding-bottom:47%; /* 16:9 ratio */
+	padding-bottom:46.25%; /* ratio */
 	padding-top:30px;
 	height:0;
 	margin: 0 auto;
@@ -100,7 +100,7 @@ section.Digitaal-magazine-MKBGW-02 {
 }
 
 .vidInfo{
-	font-size: 26px;
+	font-size: 28px;
 	font-size: 1.7vw;
 }
 
@@ -108,8 +108,10 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: relative;
 	color: white;
 	top: 21%;
-	left: 30%;
-	font-size: 24pt;
+	left: 28%;
+	width: 44%;
+	font-size: 28px;
+	font-size: 1.35vw;
 }
 
 #hex1{
