--- a/css/main.css
+++ b/css/main.css
@@ -83,7 +83,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	background-color: #F28D01;
 	background-size: cover;
 	width:100%;
-	height:1964px;
+	height:1700px;
 }
 
 .vidText{
@@ -94,7 +94,7 @@ section.Digitaal-magazine-MKBGW-02 {
 
 #studentVidOne{
 	color: white;
-	top: 12.8%;
+	top: 15%;
 	position: absolute;
 
 }
@@ -102,7 +102,7 @@ section.Digitaal-magazine-MKBGW-02 {
 #textTwo{
 	position: relative;
 	color: white;
-	top: 21%;
+	top: 24%;
 	left: 28%;
 	width: 44%;
 	font-size: 28px;
@@ -122,18 +122,18 @@ section.Digitaal-magazine-MKBGW-02 {
 	height: auto;
 	width: 19%;
 	margin-left: -6.4%;
-	margin-top: 24%;
+	bottom: 2% ;
 }
 
 #stripe1 {
 	position: absolute;
-	top: 15%;
+	top: 17.7%;
 	left: 28.1%;
 }
 
 #stripe2 {
 	position: absolute;
-	margin-top: 32.1%;
+	bottom: 5.8%;
 	margin-left: 0%;
 	width: 68.8%;
 	z-index: 2;
@@ -142,8 +142,9 @@ section.Digitaal-magazine-MKBGW-02 {
 .tip1{
 	position: absolute;
 	width: 8%;
+	height: 10%;
 	font-size: 40px;
-	top: 65%;
+	bottom: 10.5%;
 	color: white;
 	left: 33%;
 }
@@ -155,8 +156,9 @@ section.Digitaal-magazine-MKBGW-02 {
 .tip2{
 	position: absolute;
 	width: 8%;
+	height: 10%;
 	font-size: 40px;
-	top: 65%;
+	bottom: 10.5%;
 	color: white;
 	left: 42%;
 }
@@ -168,8 +170,9 @@ section.Digitaal-magazine-MKBGW-02 {
 .tip3{
 	position: absolute;
 	width: 8%;
+	height: 10%;
 	font-size: 40px;
-	top: 65%;
+	bottom: 10.5%;
 	color: white;
 	left: 51%;
 }
@@ -181,8 +184,9 @@ section.Digitaal-magazine-MKBGW-02 {
 .tip4{
 	position: absolute;
 	width: 8%;
+	height: 10%;
 	font-size: 40px;
-	top: 65%;
+	bottom: 10%;
 	color: white;
 	left: 60%;
 }
