--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@ body{
 	margin: 0px;
 	background-color: #FFFFFF;
 	overflow-x: hidden;
-	max-zoom: 120%;
 }
 
 .DINcondensed { /*DIN-condensed font */ }
@@ -45,156 +44,65 @@ p{
 #frameNine{ top: 356px }
 #frameEleven{ top: 420px; }
 
-#textOne{
-	position: absolute;
-	top: 500px;
-}
-
 section.Digitaal-magazine-MKBGW-01 {
 	position:relative;
 	background-color: white;
 	width:100%;
-	height:749px;
-}
-
-.text{
-	text-align: center;
-	height: 500px;
-	width: 500px;
-	color: black;
-	left: 50%;
-	margin: -350px 0 0 -250px;
-	letter-spacing: 1px;
+	height:500px;
 }
 
 #intro{
+	position: relative;
 	font-size: 50px;
 	font-weight: normal;
 	letter-spacing: 6px;
 }
 
-#textOne{
+.text{
 	position: absolute;
-	top: 500px;
+	text-align: center;
+	height: 500px;
+	width: 500px;
+	color: black;
+	left: 50%;
+	margin: 0 0 0 -250px;
+	letter-spacing: 1px;
 }
-
-/* Probleemsectie */
 
 section.Digitaal-magazine-MKBGW-02 {
 	position:relative;
 	background-color: #F28D01;
-	background-size: cover;
 	width:100%;
-	height:1700px;
-}
-
-.vidText{
-	left:30%;
-	letter-spacing: 5px;
-	font-size: 40px;
-}
-
-#studentVidOne{
-	color: white;
-	top: 15%;
-	position: absolute;
-
-}
-
-#textTwo{
-	position: relative;
-	color: white;
-	top: 25%;
-	left: 28%;
-	width: 44%;
-	font-size: 28px;
-	font-size: 1.35vw;
+	height:auto;
 }
 
 #hex1{
 	position: absolute;
+	width: 40%;
 	height: auto;
-	width: 35%;
-	margin-left: 79%;
-	margin-top: -25%;
+	margin-left: 80%;
+	margin-top: 3%;
 }
 
-/* Hier begint het fout te lopen :c */
-
-#hex2{
+#stripe1{
 	position: absolute;
-	height: auto;
-	width: 19%;
-	margin-left: -6.4%;
-	bottom: 4.5%;
+	margin-left: 28.15%;
+	margin-top: 11.8%;
 }
 
-#stripe1 {
+.vidText{
 	position: absolute;
-	top: 17.7%;
-	left: 28.1%;
-}
-
-#stripe2 {
-	position: absolute;
-	bottom: 5.8%;
-	margin-left: 0%;
-	width: 68.8%;
-	z-index: 2;
-}
-
-.tip1{
-	position: absolute;
-	width: 8%;
-	height: 10%;
-	font-size: 40px;
-	bottom: 10.5%;
 	color: white;
-	left: 33%;
-}
-
-.tip1text{
-	font-size: 16px;
-}
-
-.tip2{
-	position: absolute;
-	width: 8%;
-	height: 10%;
+	left: 29.15%;
 	font-size: 40px;
-	bottom: 10.5%;
+	margin-top: 10%;
+}
+
+#textTwo{
+	position: relative;
+	margin-top: 17%;
+	left: 28.15%;
 	color: white;
-	left: 42%;
-}
-
-.tip2text{
-	font-size: 16px;
-}
-
-.tip3{
-	position: absolute;
-	width: 8%;
-	height: 10%;
-	font-size: 40px;
-	bottom: 10.5%;
-	color: white;
-	left: 51%;
-}
-
-.tip3text{
-	font-size: 16px;
-}
-
-.tip4{
-	position: absolute;
-	width: 8%;
-	height: 10%;
-	font-size: 40px;
-	bottom: 10.5%;
-	color: white;
-	left: 60%;
-}
-
-.tip4text{
-	font-size: 16px;
+	font-size: 28px;
+	font-size: 1.35vw;
 }
