--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body{
 	margin: 0px;
-	background-color: #FFFFFF;
+	background-color: gray;
 	overflow-x: hidden;
 }
 
@@ -36,19 +36,13 @@ p{
 	height:100%;
 }
 
-#frameTwo{ top: 421px; }
-#frameThree{ top: 416px }
-#frameFive{ top: 420px }
-#frameSix{ top: 356px }
-#frameEight{ top: 420px }
-#frameNine{ top: 356px }
-#frameEleven{ top: 420px; }
+#frameTwo{ top: 150px; }
 
 section.Digitaal-magazine-MKBGW-01 {
 	position:relative;
 	background-color: white;
 	width:100%;
-	height:500px;
+	height:749px;
 }
 
 #intro{
@@ -85,17 +79,21 @@ section.Digitaal-magazine-MKBGW-02 {
 }
 
 #stripe1{
+	height: 100px;
+	width: 20px;
 	position: absolute;
 	margin-left: 28.15%;
-	margin-top: 11.8%;
+	margin-top: 1%;
 }
 
-.vidText{
+#studentVidOne{
+	height: 100px;
+	width: 200px;
 	position: absolute;
 	color: white;
 	left: 29.15%;
-	font-size: 40px;
-	margin-top: 10%;
+	font-size: 36px;
+	margin-top: 1%;
 }
 
 #textTwo{
