--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ p{
 }
 
 .frame{
+	position: relative;
 	width: 50%;
 	max-width: 1280px;
 	margin: 0 auto;
@@ -36,13 +37,13 @@ p{
 	height:100%;
 }
 
-#frameTwo{ top: 150px; }
+#frameTwo{ margin-top: 10%!important; }
 
 section.Digitaal-magazine-MKBGW-01 {
 	position:relative;
 	background-color: white;
 	width:100%;
-	height:749px;
+	height:400px;
 }
 
 #intro{
@@ -90,7 +91,7 @@ section.Digitaal-magazine-MKBGW-02 {
 #view {
 	position: absolute;
 	background-color: pink;
-	margin-left: 28%;
+	margin-left: 28.15%;
 	margin-top: 2.5%;
 }
 
@@ -101,7 +102,8 @@ section.Digitaal-magazine-MKBGW-02 {
 	position: absolute;
 	color: white;
 	left: 29.15%;
-	font-size: 36px;
+	font-size: 1.5vw;
+	margin-top: 2.5%;
 }
 
 #textTwo{
