--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 body{
 	margin: 0px;
 	background-color: gray;
+}
+
+section{
 	overflow-x: hidden;
 }
 
@@ -11,7 +14,6 @@ p{
 }
 
 .frame{
-	position: relative;
 	width: 50%;
 	max-width: 1280px;
 	margin: 0 auto;
@@ -37,13 +39,14 @@ p{
 	height:100%;
 }
 
-#frameTwo{ margin-top: 10%!important; }
+#frameTwo{ margin-top: 13%; }
 
 section.Digitaal-magazine-MKBGW-01 {
 	position:relative;
 	background-color: white;
 	width:100%;
-	height:400px;
+	height:500px;
+	overflow: hidden;
 }
 
 #intro{
@@ -97,18 +100,21 @@ section.Digitaal-magazine-MKBGW-02 {
 
 #studentVidOne{
 	margin-top: 1.81%
-	height: 100px;
 	width: 200px;
 	position: absolute;
 	color: white;
-	left: 29.15%;
-	font-size: 1.5vw;
-	margin-top: 2.5%;
+	left: 28.15%;
+	font-size: 1.8vw;
+}
+
+.borderleft{
+	padding-left: 5px;
+	border-left: solid white 5px;
 }
 
 #textTwo{
 	position: relative;
-	margin-top: 17%;
+	margin-top: 1%;
 	left: 28.15%;
 	color: white;
 	font-size: 1.4vw;
