--- a/css/main.css
+++ b/css/main.css
@@ -83,15 +83,6 @@ section.Digitaal-magazine-MKBGW-02 {
 	opacity: 0.1;
 }
 
-#stripe1{
-	height: 100px;
-	width: 20px;
-	position: absolute;
-	margin-left: 28.15%;
-	margin-top: 1%;
-	size: 1.6vw;
-}
-
 #view {
 	position: absolute;
 	background-color: pink;
@@ -119,4 +110,5 @@ section.Digitaal-magazine-MKBGW-02 {
 	left: 28.15%;
 	color: white;
 	font-size: 1.3vw;
+	width: 44%;
 }
