--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ p{
 	width: 87.5%;
 	max-width: 1280px;
 	position:relative;
-	padding-bottom:46.75%; /* ratio */
+	padding-bottom:45.25%; /* ratio */
 	padding-top:30px;
 	height:0;
 	margin: 0 auto;
@@ -39,14 +39,13 @@ p{
 	height:100%;
 }
 
-#frameTwo{ margin-top: 13%; }
+#frameTwo{ margin-top: 27%; }
 
 section.Digitaal-magazine-MKBGW-01 {
 	position:relative;
 	background-color: white;
 	width:100%;
 	height:500px;
-	overflow: hidden;
 }
 
 #intro{
@@ -72,6 +71,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	background-color: #F28D01;
 	width:100%;
 	height:auto;
+	overflow: hidden;
 }
 
 #hex1{
@@ -91,7 +91,7 @@ section.Digitaal-magazine-MKBGW-02 {
 }
 
 #studentVidOne{
-	margin-top: 1.81%
+	margin-top: 6.81%;
 	width: 200px;
 	position: absolute;
 	color: white;
@@ -112,3 +112,77 @@ section.Digitaal-magazine-MKBGW-02 {
 	font-size: 1.3vw;
 	width: 44%;
 }
+
+#hex2{
+	position: absolute;
+	height: auto;
+	width: 19%;
+	margin-left: -40%;
+	margin-top: -4.15%;
+}
+
+#stripe2 {
+	float: left;
+	position: absolute;
+	margin-top: 4%;
+	margin-left: -32%;
+	width: 68.8%;
+	z-index: 2;
+}
+
+.tip1{
+	position: relative;
+	float: left;
+	width: 8%;
+	height: 10%;
+	font-size: 40px;
+	color: white;
+	left: 29.5%;
+}
+
+.tip1text{
+	font-size: 16px;
+}
+
+.tip2{
+	position: relative;
+	float: left;
+	width: 8%;
+	height: 10%;
+	font-size: 40px;
+	color: white;
+	left: 32.5%;
+}
+
+.tip2text{
+	font-size: 16px;
+}
+
+.tip3{
+	position: relative;
+	float: left;
+	width: 8%;
+	height: 10%;
+	font-size: 40px;
+	color: white;
+	left: 35.5%;
+}
+
+.tip3text{
+	font-size: 16px;
+}
+
+.tip4{
+	position: relative;
+	float: left;
+	width: 8%;
+	height: 10%;
+	font-size: 40px;
+	color: white;
+	left: 38.5%;
+}
+
+.tip4text{
+	font-size: 16px;
+}
+
