--- a/css/main.css
+++ b/css/main.css
@@ -68,8 +68,6 @@ section.Digitaal-magazine-MKBGW-01 {
 	letter-spacing: 1px;
 }
 
-/*sectie 2*/
-
 section.Digitaal-magazine-MKBGW-02 {
 	position:relative;
 	background-color: #F28D01;
@@ -123,30 +121,31 @@ section.Digitaal-magazine-MKBGW-02 {
 	width: 19%;
 	margin-left: -40%;
 	margin-top: -4.15%;
+	opacity: 0.1;
 }
 
 #stripe1 {
-		float: left;
-		position: absolute;
-		margin-top: 4%;
-		margin-left: -32%;
-		width: 68.8%;
-		z-index: 2;
-	}
+	float: left;
+	position: absolute;
+	margin-top: 4%;
+	margin-left: -32%;
+	width: 71.8%;
+	z-index: 2;
+}
 
 .tip1{
 	position: relative;
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: white;
 	left: 29.5%;
 
 }
 
 .tip1text{
-	font-size: 16px;
+	font-size: 1vw;
 }
 
 .tip2{
@@ -154,13 +153,13 @@ section.Digitaal-magazine-MKBGW-02 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: white;
 	left: 32.5%;
 }
 
 .tip2text{
-	font-size: 16px;
+	font-size: 1vw;
 }
 
 .tip3{
@@ -168,13 +167,13 @@ section.Digitaal-magazine-MKBGW-02 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: white;
 	left: 35.5%;
 }
 
 .tip3text{
-	font-size: 16px;
+	font-size: 1vw;
 }
 
 .tip4{
@@ -182,13 +181,13 @@ section.Digitaal-magazine-MKBGW-02 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: white;
 	left: 38.5%;
 }
 
 .tip4text{
-	font-size: 16px;
+	font-size: 1vw;
 }
 
 /*sectie 3*/
@@ -244,7 +243,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	float: left;
 	position: absolute;
 	margin-top: 4%;
-	margin-left: -3.5%;
+	margin-left: -3.9%;
 	width: 78.8%;
 	z-index: 2;
 }
@@ -254,7 +253,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: black;
 	left: 29.5%;
 
@@ -265,7 +264,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: black;
 	left: 32.5%;
 }
@@ -275,7 +274,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: black;
 	left: 35.5%;
 }
@@ -285,7 +284,40 @@ section.Digitaal-magazine-MKBGW-03 {
 	float: left;
 	width: 8%;
 	height: 10%;
-	font-size: 40px;
+	font-size: 1.6vw;
 	color: black;
 	left: 38.5%;
+}
+
+section.Digitaal-magazine-MKBGW-04 {
+	position:relative;
+	background: url("../images/Digitaal-magazine-MKBGW_04.jpg") top center no-repeat;
+	background-size: contain;
+	height: 1369px;
+}
+
+section.Digitaal-magazine-MKBGW-05 {
+	position:relative;
+	background-color: #23B3A9;
+	width:100%;
+	height:1500px;
+	overflow: hidden;
+}
+
+#hex5{
+	position: absolute;
+	width: 40%;
+	height: auto;
+	margin-left: 80%;
+	margin-top: 3%;
+	opacity: 0.1;
+}
+
+#hex6{
+	position: absolute;
+	height: auto;
+	width: 19%;
+	margin-left: -40%;
+	margin-top: -4.15%;
+	opacity: 0.1;
 }
