--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ section.Digitaal-magazine-MKBGW-02 {
 	position:relative;
 	background-color: #F28D01;
 	width:100%;
-	height:1500px;
+	height:130%;
 	overflow: hidden;
 }
 
@@ -195,7 +195,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	position:relative;
 	background-color: white;
 	width:100%;
-	height:1500px;
+	height:130%;
 	overflow: hidden;
 }
 
@@ -300,7 +300,7 @@ section.Digitaal-magazine-MKBGW-05 {
 	position:relative;
 	background-color: #23B3A9;
 	width:100%;
-	height:1500px;
+	height:130%;
 	overflow: hidden;
 }
 
