--- a/css/main.css
+++ b/css/main.css
@@ -294,8 +294,8 @@ section.Digitaal-magazine-MKBGW-03 {
 section.Digitaal-magazine-MKBGW-04 {
 	position:relative;
 	background: url("../images/Digitaal-magazine-MKBGW_04.jpg") top center no-repeat;
-	background-size: contain;
-	height: 1369px;
+	background-size: cover;
+	height: 75%;
 }
 
 section.Digitaal-magazine-MKBGW-05 {
