--- a/css/pageThree.css
+++ b/css/pageThree.css
@@ -27,6 +27,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	width: 19%;
 	margin-left: 88%;
 	margin-top: 17.5%;
+	opacity: 0.1;
 }
 
 #hex4{
@@ -35,6 +36,7 @@ section.Digitaal-magazine-MKBGW-03 {
 	height: auto;
 	margin-left: -46%;
 	margin-top: -11%;
+	opacity: 0.1;
 }
 
 
