--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,16 @@ p{
 	opacity: 0.1;
 }
 
+.hex5{
+  position: absolute;
+  width: 40%;
+  height: auto;
+  margin-left: 80%;
+  margin-top: -2%;
+  opacity: 0.1;
+  z-index: 2;
+}
+
 .studentVidWhite{
 	margin-top: 6.81%;
 	width: 200px;
